<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/order_title"
        android:layout_width="214dp"
        android:layout_height="64dp"
        android:fontFamily="sans-serif"
        android:text="@string/please_edit_order"
        android:textAlignment="center"
        android:textColor="#1010FF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <EditText
        android:id="@+id/ordering_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/please_fill_in_your_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_title"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/pickle"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_marginBottom="236dp"
        android:fontFamily="sans-serif"
        android:text="@string/how_many_pickles_do_you_want_between_0_to_10"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordering_name"
        app:layout_constraintVertical_bias="0.101" />

    <SeekBar
        android:id="@+id/num_pickles"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:clickable="false"
        android:max="10"
        android:progressDrawable="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickle"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkbox_hummus"
        android:layout_width="349dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif"
        android:layoutDirection="rtl"
        android:text="@string/would_you_like_hummus_in_your_sandwich"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_pickles"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkbox_tahini"
        android:layout_width="365dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif"
        android:layoutDirection="rtl"
        android:text="@string/would_you_like_tahini_in_your_sandwich"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_hummus"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/specifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/do_you_have_any_specifications"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tahini"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/save_order_button"
        android:layout_width="167dp"
        android:layout_height="63dp"
        android:fontFamily="sans-serif"
        android:text="@string/please_save_my_order"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specifications"
        app:layout_constraintVertical_bias="0.443" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="195dp"
        android:layout_height="66dp"
        android:fontFamily="sans-serif"
        android:text="@string/please_delete_my_order"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_order_button"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specifications"
        app:layout_constraintVertical_bias="0.436" />


</androidx.constraintlayout.widget.ConstraintLayout>